kubernetes/apps/production/downloads/transmission/nordvpn-secret.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: azure-nordvpn-secret
  namespace: downloads
spec:
  replicas: 1
  selector:
    matchLabels:
      name: nordvpn-secret
  template:
    metadata:
      labels:
        name: nordvpn-secret
    spec:
      volumes:
      - name: nordvpn-secret
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: azure-nordvpn-secret
          nodePublishSecretRef:
            name: azure-secrets-store-cred
      containers:
      - name: azure-nordvpn-secret
        image: busybox:1.35.0
        command:
          - "/bin/sleep"
          - "10000"
        volumeMounts:
        - name: nordvpn-secret
          mountPath: /mnt/secrets-store
          readOnly: true
        securityContext:
          allowPrivilegeEscalation: false
