kubernetes/apps/production/downloads/transmission/transmission-deploy.yaml
# example from: https://github.com/TobiasDeBruijn/HomelabKubernetes/blob/new/manifests/homelab/transmision.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
  namespace: downloads
spec:
  replicas: 1
  selector:
    matchLabels:
      name: transmission
  template:
    metadata:
      labels:
        name: transmission
    spec:
      dnsPolicy: "None"
      dnsConfig:
        nameservers:
        - 1.1.1.1
        - 9.9.9.9
      automountServiceAccountToken: false
      volumes:
      - name: downloads-volume
        persistentVolumeClaim:
          claimName: transmission-downloads-pvc
      containers:
      - name: transmission
        image: haugene/transmission-openvpn@sha256:09d12f2f95409dc51b928245e27c83581d85fd62c089c1e55b4461b38920231b
        ports:
        - name: proxy
          containerPort: 8118
          protocol: TCP
        - name: webui
          containerPort: 9091
          protocol: TCP
        securityContext:
          capabilities:
            drop:
            - CAP_NET_RAW
            add:
            - NET_ADMIN
        volumeMounts:
        - name: downloads-volume
          mountPath: /media/downloads/torrents
---
apiVersion: v1
kind: Service
metadata:
  name: transmission
  namespace: downloads
spec:
  ports:
  - name: proxy
    port: 8118
    protocol: TCP
    targetPort: 8118
  - name: webui
    port: 9091
    protocol: TCP
    targetPort: 9091
  selector:
    name: transmission
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
  name: transmission-ingress
  namespace: downloads
spec:
  ingressClassName: nginx
  rules:
  - host: media.${DOMAIN_NAME}
    http:
      paths:
      - path: /transmission
        pathType: Prefix
        backend:
          service:
            name: transmission
            port:
              name: webui
  tls:
  - hosts:
    - media.${DOMAIN_NAME}
